# quark

./: CMakeLists.txt
include/quark/: assert.hpp  atomic.hpp  config.hpp  cstdint.hpp  current_function.hpp  fixups.hpp  limits.hpp  memory_order.hpp  version.hpp
include/quark/atomic/: atomic.hpp  atomic_flag.hpp  capabilities.hpp  fences.hpp
include/quark/atomic/detail/: atomic_flag.hpp  atomic_template.hpp  bitwise_cast.hpp  caps_gcc_alpha.hpp  caps_gcc_arm.hpp  caps_gcc_atomic.hpp  caps_gcc_ppc.hpp  caps_gcc_sparc.hpp  caps_gcc_sync.hpp  caps_gcc_x86.hpp  caps_linux_arm.hpp  caps_msvc_arm.hpp  caps_msvc_x86.hpp  caps_windows.hpp  config.hpp  int_sizes.hpp  interlocked.hpp  link.hpp  lockpool.hpp  operations.hpp  operations_fwd.hpp  operations_lockfree.hpp  ops_cas_based.hpp  ops_emulated.hpp  ops_extending_cas_based.hpp  ops_gcc_alpha.hpp  ops_gcc_arm.hpp  ops_gcc_atomic.hpp  ops_gcc_ppc.hpp  ops_gcc_sparc.hpp  ops_gcc_sync.hpp  ops_gcc_x86.hpp  ops_gcc_x86_dcas.hpp  ops_linux_arm.hpp  ops_msvc_arm.hpp  ops_msvc_common.hpp  ops_msvc_x86.hpp  ops_windows.hpp  pause.hpp  platform.hpp  (+1 more)
include/quark/config/: abi_prefix.hpp  abi_suffix.hpp  auto_link.hpp  posix_features.hpp  requires_threads.hpp  select_compiler_config.hpp  select_platform_config.hpp  select_stdlib_config.hpp  suffix.hpp  user.hpp  warning_disable.hpp
include/quark/config/abi/: borland_prefix.hpp  borland_suffix.hpp  msvc_prefix.hpp  msvc_suffix.hpp
include/quark/config/compiler/: borland.hpp  clang.hpp  cray.hpp  (+21 more)
msvc/: quark.sln  quark.vcproj  quark2008.sln  quark2008.vcproj
src/: lockpool.cpp
(+32 files in other folders)
